--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": "next/core-web-vitals"
-}
+    "extends": [
+      "eslint:recommended",
+      "prettier",
+      "plugin:import/recommended",
+      "next"
+    ],
+    "plugins": ["prettier", "react-hooks"],
+    "rules": {
+      "prettier/prettier": "warn",
+      "no-unused-vars": "warn",
+      "react/prop-types": "off",
+      "react/no-unescaped-entities": "off",
+      "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+      "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    },
+    "env": {
+      "node": true
+    }
+  }
