--- a/.github/workflows/departments.yml
+++ b/.github/workflows/departments.yml
@@ -22,7 +22,9 @@ jobs:
         with:
           python-version: "3.10"
       - name: Scrape Departments
-        run: python ./scrapers/fetch-departments.py
+        run: |
+          pip install requests beautifulsoup4
+          python ./scrapers/fetch-departments.py
       - name: Commit Back Changed Data
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
