--- a/.github/workflows/semesters.yml
+++ b/.github/workflows/semesters.yml
@@ -2,7 +2,7 @@ name: Scrape Latest Semester
 
 on:
   schedule:
-    - cron: 0 0 1 * 0
+    - cron: 0 0 1 * *
     - cron: 0 0 16 * *
 
   workflow_dispatch:
