--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -29,8 +29,13 @@ jobs:
         run: |
           pip install requests beautifulsoup4
           python ./scrapers/fetch-courses.py
-      - name: "Run Schedule Scraper if coures have been Changed"
-        if: steps.auto-commit-action.outputs.changes_detected == 'true'
+      - name: Verify Changed files
+        uses: tj-actions/verify-changed-files@v10.1
+        id: verify-changed-files
+        with:
+          files: data/courses.json
+      - name: Run step only when files change.
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: python ./scrapers/fetch-schedule.py
       - name: Get Time
         id: time
