--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-select": "^5.4.0"
+    "react-select": "^5.4.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
