--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -27,7 +27,7 @@ jobs:
         uses: tj-actions/verify-changed-files@v10.1
         id: verify-changed-files
         with:
-          files: data/courses.json
+          files: data/base-courses.json
       - name: Run step only when files change.
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: python ./scrapers/fetch-schedule.py
