--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.6.4",
+    "@floating-ui/react-dom-interactions": "^0.9.2",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
@@ -17,6 +18,7 @@
     "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-merge-refs": "^2.0.1",
     "react-select": "^5.4.0",
     "react-use": "^17.4.0"
   },
