added border animation

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
     "react-select": "^5.4.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
