increase schedule frequency

--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -3,7 +3,11 @@ name: Scrape Latest Courses
 on:
   schedule:
     - cron: 0 0 1 * *
+    - cron: 0 0 10 * *
     - cron: 0 0 16 * *
+    - cron: 0 0 20 * *
+    - cron: 0 0 25 * *
+    - cron: 0 0 30 * *
 
   workflow_dispatch: {}
   workflow_call: {}
