--- a/.github/workflows/departments.yml
+++ b/.github/workflows/departments.yml
@@ -3,6 +3,7 @@ name: Scrape Departments Data
 on:
   schedule:
     - cron: 0 0 1 * *
+    - cron: 0 0 20 * *
   workflow_dispatch:
     inputs:
       logLevel:
