--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -42,6 +42,8 @@ jobs:
         uses: nanzm/get-time-action@v1.1
         with:
           format: "DD-MM-YYYY"
+      - name: Pull Remote Changes
+        run: git pull
       - name: Commit Back Changed Data
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
