--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.6.4",
-    "@floating-ui/react-dom-interactions": "^0.9.2",
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^1.0.6",
-    "@tailwindcss/forms": "^0.5.2",
-    "next": "12.2.3",
+    "@builder.io/partytown": "^0.7.0",
+    "@floating-ui/react-dom-interactions": "^0.9.3",
+    "@headlessui/react": "^1.7.0",
+    "@heroicons/react": "^2.0.10",
+    "@tailwindcss/forms": "^0.5.3",
+    "next": "12.3.0",
     "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,14 +25,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.21.0",
-    "eslint-config-next": "12.2.3",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "globby": "11.0.4",
-    "postcss": "^8.4.14",
+    "fast-glob": "^3.2.12",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.7"
+    "tailwindcss": "^3.1.8"
   }
 }
