--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "@tailwindcss/forms": "^0.5.3",
+    "@vercel/analytics": "^0.1.1",
     "next": "12.3.0",
     "next-seo": "^5.5.0",
     "react": "18.2.0",
