--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -28,7 +28,7 @@ jobs:
           pip install requests beautifulsoup4
           python ./scrapers/fetch-courses.py
       - name: Verify Changed files
-        uses: tj-actions/verify-changed-files@v10.1
+        uses: tj-actions/verify-changed-files@master
         id: verify-changed-files
         with:
           files: data/base-courses.json
