--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -18,9 +18,9 @@ jobs:
 
     steps:
       - name: Check out the repo
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Add Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@main
         with:
           python-version: "3.10"
       - name: Scrape Courses
@@ -45,7 +45,7 @@ jobs:
       - name: Pull Remote Changes
         run: git pull
       - name: Commit Back Changed Data
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: stefanzweifel/git-auto-commit-action@main
         with:
           commit_message: "Latest Courses data: ${{ steps.time.outputs.time }}"
           commit_author: Author <actions@github.com>
