--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Pull Remote Changes
         run: git pull
       - name: Commit Back Changed Data
-        uses: stefanzweifel/git-auto-commit-action@main
+        uses: stefanzweifel/git-auto-commit-action@master
         with:
           commit_message: "Latest Courses data: ${{ steps.time.outputs.time }}"
           commit_author: Author <actions@github.com>
