--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,18 +2,15 @@ name: Scrape Latest Schedule
 
 on:
   schedule:
-    - cron: 0 0 1 * *
-    - cron: 0 0 10 * *
-    - cron: 0 0 16 * *
-    - cron: 0 0 20 * *
-    - cron: 0 0 25 * *
-    - cron: 0 0 30 * *
-
+    - cron: 0 2 */10 * *
+    
   workflow_dispatch: {}
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Check out the repo
