Modify cron schedule for course scraping
Updated the cron schedule to run every 10 days.

--- a/.github/workflows/offerings.yml
+++ b/.github/workflows/offerings.yml
@@ -2,11 +2,8 @@ name: Scrape Latest Courses
 
 on:
   schedule:
-    - cron: 0 0 1 * *
-    - cron: 0 0 10 * *
-    - cron: 0 0 20 * *
-    - cron: 0 0 30 * *
-
+    - cron: 0 0 */10 * *
+    
   workflow_dispatch: {}
   workflow_call: {}
 
