--- a/.github/workflows/semesters.yml
+++ b/.github/workflows/semesters.yml
@@ -2,9 +2,7 @@ name: Scrape Latest Semester
 
 on:
   schedule:
-    - cron: 0 0 1 * *
-    - cron: 0 0 16 * *
-    - cron: 0 0 25 * *
+    - cron: 0 1 */13 * *
 
   workflow_dispatch:
     inputs:
